crates/bonsaidb-macros/tests/ui/file_config/only_authority.rs
use bonsaidb::files::FileConfig;

#[derive(FileConfig)]
#[file_config(authority = "authority")]
struct Test;

fn main() {}
